# AIML-RAG

./: .env.example  ASTRADB_SETUP.md  MIGRATION_COMPLETE.md  README.md  add_new_docs.py  all_main.py  app.py  main.ipynb  main.py  pyproject.toml  requirements.txt
config/: settings.py
data/text_data/: ai.txt  ai2.txt
src/: chain.py  data_loaders.py  embeddings.py  utils.py  vector_store.py
